style.css
@font-face {
    font-family: "Beleren-Bold";
    src: url('fonts/Beleren2016SmallCaps-Bold.ttf');
    src: url('fonts/Beleren2016SmallCaps-Bold.woff') format('woff');
}

@font-face {
    font-family: "Imprima";
    src: url('fonts/Imprima-Regular.ttf');
}

:root {
    --primary-color: #3A3335;
    --secondary-color: #F7EFE0;
    --text-color: #EBE0D1;
    --heading-font: "Beleren-Bold";
    --text-font: "Imprima";
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--secondary-color);
    font-family: var(--text-font), sans-serif;
    font-size: 1rem;
}

header {
    background-color: var(--primary-color);
    width: 100%;
    height: 80px;
    padding: 0 1rem;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

nav {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#backButtonMobile {
    background-color: var(--secondary-color);
    border-radius: 15px;
    width: clamp(30px, 10%, 120px);
    display: none;
    align-items: center;
    justify-content: center;
    padding: .5rem;
    max-height: 40px;
    transition: opacity .3s;
}

#backButtonDesktop {
    transition: all .3s;
    display: none;
}

#backButtonDesktop:hover {
    opacity: 0.6;
}

.arrow_back {
    width: clamp(30px, 10%, 120px);
}

.logoWCS {
    width: clamp(60px, 45%, 225px);
}

.logoMain {
    width: clamp(60px, 60%, 200px);
}

.logoTeam {
    width: clamp(30px, 75%, 120px);
    max-height: 60px;
    display: none;
}

nav>div {
    display: flex;
    justify-content: flex-end;
}

main {
    gap: 1rem;
    padding: 1rem 0;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 30%;
    background-attachment: fixed;
}

.booster>img {
    width: 12rem;
    filter: drop-shadow(0 0.25rem 0.25rem black);
    transition-duration: 300ms;
}

#homePage {
    display: block;
}

/* carousel */

.sliderContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    width: auto;
    text-align: center;
    padding: 0;
}

.slider {
    display: flex;
    overflow-x: scroll;
    scroll-snap-type: inline mandatory;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;

}

::-webkit-scrollbar {
    display: none;
}

/* fin carousel */


label {
    display: flex;
    align-items: center;
    justify-content: center;
    width: clamp(200px, 100%, 350px);
    height: 50px;
    border: var(--primary-color) solid 1px;
    border-radius: 15px;
    overflow: hidden;
}

#searchBar {
    display: none;
    /* display flex */
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    gap: 1rem;
}

label>img {
    height: 100%;
    background-color: var(--primary-color);
    padding: 0.5rem;
    border-radius: 0 15px 15px 0;
}

label>input {
    width: 100%;
    height: 100%;
    border-radius: 15px 0 0 15px;
    background-color: var(--secondary-color);
    padding: .5rem;
}

label>img {
    width: clamp(30px, 4vw, 80px);
}

label>img:hover {
    cursor: pointer;
}

a {
    text-decoration: none;
    color: var(--text-color);
}

p {
    font-family: var(--text-font);
    text-align: center;
}

ul {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    list-style: none;
    gap: .5rem;
}

li {
    width: clamp(100px, 100%, 250px);
    height: 50px;
    display: flex;
    justify-self: center;
    align-items: center;
    justify-content: center;
}

li>button {
    transition: all .3s;
}

li>button:hover {
    cursor: pointer;
    opacity: 0.85;
}

.allLogo {
    border-radius: 40px;
}

.titleMain {
    font-family: var(--heading-font);
    margin: 2rem;
    text-align: center;
    font-size: 2rem;

}

.boosterData .boosterJs .boosterStaff {
    display: flex;
    align-items: center;
    justify-content: center;
}

.booster {
    display: flex;
    justify-content: center;
    align-items: center;
}

a>h2 {
    font-family: var(--heading-font);
    font-size: clamp(1.2rem, 2vw, 3.5rem);
    text-align: center;
    color: var(--primary-color);
    margin-top: 1rem;
}

button {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    border-radius: 15px;
    padding: 0.25rem;
    width: 100%;
    height: 100%;
}

button>p {
    display: none;
}

button>img {
    max-width: clamp(45px, 6vw, 150px);
    max-height: 100%;
}

.arrowUp {
    max-width: 60px;
}


/* CARTES ET BOUTONS : */

.logo-button,
.logo-button-sparkle {
    display: none;
}

#section-cards {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
}

.card {
    width: 250px;
    height: 350px;
    background-size: contain;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 15px;
    transition: all .3s;
    box-shadow: 2px 2px 4px 2px grey;
}

.card:hover {
    scale: 1.05;
    box-shadow: 4px 4px 8px 4px grey;
    cursor: pointer;
}

.card-header {
    width: 12rem;
    display: flex;
    justify-content: space-between;
}

.card-logo {
    width: .8rem;
    margin-top: 1.3rem;
}

.card-name {
    margin-top: 1.4rem;
    margin-left: .2rem;
    color: var(--primary-color);
    font-size: 12px;
    font-weight: bold;
    text-align: justify;
}

.card-img-div {
    width: 82.5%;
    padding-top: .4rem;
}

.card-img {
    width: 100%;
    height: 9.5rem;
    object-fit: cover;
}

.card-attack {
    padding-top: 2.9rem;
}


/* ZOOM */

.zoomBlurBackground {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(4px);
    display: none;
    justify-content: center;
    align-items: center;
}
/* ... */

